# ncast

./: .gitignore  CMakeLists.txt  README.md  build_docs.sh  rebuild.sh  run_benchmarks.sh  run_demos.sh  run_tests.sh  test_standards.cpp
cmake/: ncastConfig.cmake.in
demos/: benchmark_ncast.cpp  benchmark_ncast_no_validation.cpp  benchmark_ncast_no_validation.h  demo_ncast.cpp
docs/: Doxyfile  Doxyfile.in  mainpage.md
include/ncast/: ncast.h
tests/: test_ncast.cpp  test_ncast_char.cpp  test_ncast_core.cpp  test_ncast_float.cpp  test_ncast_int.cpp
